--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
-    "ant-design-vue": "^1.6.2",
-    "core-js": "^3.6.5",
-    "firebase": "^7.16.1",
-    "register-service-worker": "^1.7.1",
-    "vue": "^2.6.11",
-    "vue-i18n": "^8.21.0",
-    "vue-router": "^3.2.0",
-    "vuefire": "^2.2.0-alpha.0",
-    "vuex": "^3.4.0"
+    "ant-design-vue": "^1.7.4",
+    "core-js": "^3.10.1",
+    "firebase": "^7.24.0",
+    "register-service-worker": "^1.7.2",
+    "vue": "^2.6.12",
+    "vue-i18n": "^8.24.3",
+    "vue-router": "^3.5.1",
+    "vuefire": "^2.2.5",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@intlify/vue-i18n-loader": "^1.0.0",
+    "@intlify/vue-i18n-loader": "^1.1.0",
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-plugin-pwa": "~4.4.0",
@@ -31,6 +31,6 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "vue-cli-plugin-i18n": "~1.0.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.12"
   }
 }
