--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
+    "@volar-plugins/vetur": "^0.1.0",
     "ant-design-vue": "^1.7.4",
     "core-js": "^3.10.1",
     "firebase": "^7.24.0",
